# nebula2-wildos

./: .gitattributes  .gitignore  README.md  requirements.txt
visual_navigation/: README.md  package.xml  setup.cfg  setup.py
visual_navigation/configs/: explorfm_triangulator_conf.yaml  geofrontier_nav_conf.yaml  goalagnostic_geofrontier_nav_conf.yaml  imgfrontier_nav_conf.yaml  lrn_nav_conf.yaml  triangulation3d_objsearch_conf.yaml  wildos_nav_conf.yaml
visual_navigation/launch/: explorfm_triangulation_launch.py  goalagnostic_geofrontier_nav_launch.py  imgfrontier_nav_launch.py  lrn_launch.py  radio_triangulation_launch.py  save_gps_launch.py  wildos_launch.py
visual_navigation/rviz/: debug_tf_conf.rviz  nebula_lrn_conf_marsyard.rviz  nebula_nav_conf_jpl.rviz  nebula_nav_conf_marsyard.rviz  nebula_triang_conf_day1.rviz
visual_navigation/visual_navigation/archived/: debug_tf.py  img_frontier_nav.py  lrn_conf_marsyard.yaml  lrn_orig.py  nav_conf_jplcampus.yaml  nav_conf_marsyard.yaml  viz.py
visual_navigation/visual_navigation/explorfm_triangulation/: explorfm_triangulator.py
visual_navigation/visual_navigation/geofrontier_nav/: geofrontier_to_image.py  nav.py  viz.py
visual_navigation/visual_navigation/goalagnostic_geofrontier_nav/: goalagnostic_scoring.py  nav.py  viz.py
visual_navigation/visual_navigation/gps/: gps_viz.py  save_gps_path.py  save_metrics.py
visual_navigation/visual_navigation/imgfrontier_nav/: map_color.py  nav.py  pcl_color.py  viz.py  viz_net.py  viz_net_nr.py
visual_navigation/visual_navigation/lrn/: nav.py  scoring.py  viz.py
(+73 files in other folders)
